Avoid year box overlaps

--- a/app/styles/components.less
+++ b/app/styles/components.less
@@ -190,6 +190,15 @@
       padding-top: 2px;
       background-image: url('../images/years-slide.svg');
       background-size: 100% 100%;
+
+      &.begin-year {
+        left: -56px;
+        background-image: url('../images/years-slide-begin-year.svg');
+      }
+      &.end-year {
+        left: 6px;
+        background-image: url('../images/years-slide-end-year.svg');
+      }
     }
   }
 
